--- a/package.json
+++ b/package.json
@@ -15,26 +15,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && electron-builder",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "electron-updater": "^6.1.7"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^4.4.24",
-    "electron": "^28.1.0",
-    "electron-builder": "^24.9.1",
-    "postcss": "^8.4.32",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.10",
-    "vite-plugin-electron": "^0.15.5",
-    "vite-plugin-electron-renderer": "^0.14.5"
-  },
-  "engines": {
-    "node": "^14.18.0 || >=16.0.0"
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "autoprefixer": "10.4.16",
+    "daisyui": "4.4.24",
+    "electron": "28.1.0",
+    "electron-builder": "24.9.1",
+    "eslint": "8.56.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.0",
+    "vite": "5.0.10",
+    "vite-plugin-electron": "0.15.5",
+    "vite-plugin-electron-renderer": "0.14.5"
   }
 }
