--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,12 +18,12 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: latest
 
       - name: Install Dependencies
         run: npm ci
@@ -32,7 +32,7 @@ jobs:
       - name: Build
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run dist
+        run: npm run build
         shell: bash
 
       - name: Get version
@@ -52,5 +52,5 @@ jobs:
           tag_name: "v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
-            dist/Otako-Craft*
-            dist/latest*.yml
+            release/${{ env.VERSION }}/Packager*
+            release/${{ env.VERSION }}/latest*
