--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: "v${{ env.VERSION }}"
+          prerelease: ${{ github.ref == 'refs/heads/dev' }}
           generate_release_notes: true
           files: |
             release/${{ env.VERSION }}/Packager*
