--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.0",
+    "tree-kill": "^1.2.2",
     "vite": "5.0.10",
     "vite-plugin-electron": "0.15.5",
     "vite-plugin-electron-renderer": "0.14.5"
