--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Packager",
   "version": "0.0.1",
   "main": "dist-electron/main/index.js",
-  "description": "Gestor de paquetes para Parcel Shops para gestionar todo en un mismo lugar de forma rápida y sencilla.",
+  "description": "Gestor de paquetes para Parcel Shops con el objetivo de gestionar todo en un mismo lugar de forma rápida y sencilla.",
   "author": "Marc Correale",
   "license": "MIT",
   "private": true,
