--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
       contents: write
 
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
@@ -25,33 +26,26 @@ jobs:
         with:
           node-version: latest
 
-      - name: Install Dependencies
+      - name: Install Rust stable
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install dependencies (ubuntu only)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+
+      - name: Install frontend dependencies
         run: npm ci
         shell: bash
 
-      - name: Build
+      - uses: tauri-apps/tauri-action@dev
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run build
-        shell: bash
-
-      - name: Get version
-        if: runner.os == 'macOS' || runner.os == 'Linux'
-        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
-
-      - name: Get version on Windows
-        if: runner.os == 'Windows'
-        shell: powershell
-        run: |
-          $VERSION = node -p "require('./package.json').version"
-          echo "VERSION=$VERSION" | Out-File -FilePath $env:GITHUB_ENV -Append
-
-      - name: Publish release
-        uses: softprops/action-gh-release@v1
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
         with:
-          tag_name: "v${{ env.VERSION }}"
+          tagName: packager-v__VERSION__ 
+          releaseName: 'Packager v__VERSION__'
+          releaseBody: 'See the assets to download this version and install.'
           prerelease: ${{ github.ref == 'refs/heads/dev' }}
-          generate_release_notes: true
-          files: |
-            release/${{ env.VERSION }}/Packager*
-            release/${{ env.VERSION }}/latest*
+          updaterJsonPreferNsis: true
